force-app/main/default/objects/Project_Details__c/Project_Details__c.object-meta.xml
<CustomObject>
    <description>Project Details object contains all the record associated to the project.</description>
    <label>Project Details</label>
    <nameField>
        <label>Project Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Details</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>