force-app/main/default/objects/Project_Details__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Mention the purpose and goals of this project.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>