force-app/main/default/objects/Project_Details__c/fields/Project_Code__c.field-meta.xml
<CustomField>
    <fullName>Project_Code__c</fullName>
    <description>The format should be in PRJ-{0000} .</description>
    <displayFormat>PRJ-{0000}</displayFormat>
    <externalId>true</externalId>
    <label>Project Code</label>
    <type>AutoNumber</type>
</CustomField>